--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,6 +14,8 @@ jobs:
         run: |
           npm ci
           npm run build
+        env:
+          REACT_APP_API_ENDPOINT: ${{ secrets.REACT_APP_API_ENDPOINT }}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
